# Solar_Control

./: .gitignore  main.py  pyproject.toml  requirements.txt
configuration/: config.py
core/: modbus_client.py
